--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ button{
 
 .add-button{
     background-color: hsl(125, 47%, 54%);
+    margin: 5px;
 }
 
 .add-button:hover{
@@ -52,6 +53,7 @@ input[type="text"]{
     font-size: 1.6rem;
     padding: 10px;
     border: 2px solid hsla(0, 0%, 80%, 0.5);
+    border-radius: 6px;
     color: hsla(0, 0%, 0%, 0.5);
 }
 
